--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -5,11 +5,54 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="home.css">
     <title>confirmation page</title>
 </head>
 <body>
-    <h1>Congratulation, [[${message}]]</h1>
-    <p>Click here to log in <button><a href="/login">Log-In</a></button></p>
+
+<div class="home-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <div class="home-1">
+            Chat
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link"
+                       href="#">
+                        <div class="home-2">
+                            <button class="btn btn-outline-warning my-2 my-sm-0">Hello, [[${user}]]</button>
+                        </div>
+                        <span class="sr-only"></span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link"
+                       href="/">
+                        <div class="home-2">
+                            <button class="btn btn-outline-warning my-2 my-sm-0">Home</button>
+                        </div>
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+</div>
+
+    <div class="all">Congratulation, [[${message}]]</div>
+    <p>Click here to <a href="/login">Log-In</a></p>
 
 
 
