--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,88 +11,96 @@
 </head>
 <body>
 
-<div class="home-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-        <div class="home-1">
-            Chat
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="home-0">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+            <div class="home-1">
+                Chat
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link"
-                       href="#">
-                        <div class="home-2">
-                            <button class="btn btn-outline-warning my-2 my-sm-0">Hello, [[${user}]]</button>
-                        </div>
-                        <span class="sr-only"></span>
-                    </a>
-                </li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link"
+                           href="#">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">Hello, [[${user}]]</button>
+                            </div>
+                            <span class="sr-only"></span>
+                        </a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link"
-                       href="/login">
-                        <div class="home-2">
-                            <button class="btn btn-outline-warning my-2 my-sm-0">Log in</button>
-                        </div>
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="/">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">Home</button>
+                            </div>
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link"
-                       href="/register">
-                        <div class="home-2">
-                            <button class="btn btn-outline-warning my-2 my-sm-0">Creat Account</button>
-                        </div>
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="/login">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">Log in</button>
+                            </div>
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link"
-                       href="/add">
-                        <div class="home-2">
-                            <button class="btn btn-outline-warning my-2 my-sm-0">New Post</button>
-                        </div>
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
-</div>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="/register">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">Creat Account</button>
+                            </div>
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="/add">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">New Post</button>
+                            </div>
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+    </div>
 
     <div class="all">User posts</div>
 
-<div class="card">
-    <div class="card-body">
+    <div class="card">
+
         <div th:each="message : ${messages}">
-            <h4 class="card-title">Title: [[${message.title}]]</h4>
-            <h6 class="card-subtitle mb-2 text-muted">by: [[${message.user.username}]]</h6>
-            <p class="card-text">
-                Message: [[${message.description}]]
-            </p>
-            <a th:href="@{/update/{id}(id=${message.id})}">Update</a>
-            <a th:href="@{/delete/{id}(id=${message.id})}">Delete</a>
+            <div class="card-body">
+                <h4 class="card-title">Title: [[${message.title}]]</h4>
+                <h6 class="card-subtitle mb-2 text-muted">by: [[${message.user.username}]]</h6>
+                <p class="card-text">
+                    Message: [[${message.description}]]
+                </p>
+                <a th:href="@{/update/{id}(id=${message.id})}">Update</a>
+                <a th:href="@{/delete/{id}(id=${message.id})}">Delete</a>
+            </div>
         </div>
     </div>
-</div>
 
-
-
-
-
-
-    <button><a href="/logout">log out</a></button>
+    <button type="button" class="btn btn-outline-danger">
+        <a href="/logout">log out</a>
+    </button>
 
 
 
