--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,13 +5,64 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="home.css">
     <title>login</title>
 </head>
 <body>
-    <button><a href="/">Home</a></button>
-    <button><a href="/register">Creat Account</a></button>
+    <div class="home-0">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+            <div class="home-1">
+                Chat
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link"
+                           href="#">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">Hello, [[${user}]]</button>
+                            </div>
+                            <span class="sr-only"></span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="/">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">Home</button>
+                            </div>
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="/register">
+                            <div class="home-2">
+                                <button class="btn btn-outline-warning my-2 my-sm-0">Creat Account</button>
+                            </div>
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+    </div>
+<!--    <button><a href="/">Home</a></button>-->
+<!--    <button><a href="/register">Creat Account</a></button>-->
     <div class="container">
-        <h1>Login Page</h1>
+        <div class="all">Login to your Account</div>
         <div th:if="${param.error}">
             Invalid username or password
         </div>
